test: Add comprehensive unit and integration tests
Add 25+ tests covering types, RPC utilities, CSV export, and
full system integration. Includes testing documentation and
updated README. All tests passing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "blockstream-inspector"
+name = "blockstream_inspector"
 version = "0.1.0"
 edition = "2024"
 authors = ["Blessing Samuel <dicethedev@gmail.com>"]
